force-app/main/default/objects/ER_Financial_Center__c/fields/IT_Invoice_Detraction__c.field-meta.xml
<CustomField>
    <fullName>IT_Invoice_Detraction__c</fullName>
    <label>Invoice Detraction</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
                <label>NO DETRACTION</label>
            </value>
            <value>
                <fullName>1</fullName>
                <label>0,5 % DETRACTION TO BE SHOWN</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>0,5 % DETRACTION ON THE TOTAL</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>