force-app/main/default/objects/ER_Financial_Center__c/fields/IT_Invoice_Register_Wording__c.field-meta.xml
<CustomField>
    <fullName>IT_Invoice_Register_Wording__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Invoice Register Wording</label>
    <type>Checkbox</type>
</CustomField>