force-app/main/default/objects/ER_Financial_Center__c/fields/IT_Name_and_Circuit__c.field-meta.xml
<CustomField>
    <fullName>IT_Name_and_Circuit__c</fullName>
    <formula>Name + &quot; (&quot; + IT_Circuit__r.IT_Circuit_Code__c + &quot;)&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IT Name and Circuit</label>
    <type>Text</type>
</CustomField>