force-app/main/default/objects/ER_Financial_Center__c/fields/IT_Name_and_Legal_Name__c.field-meta.xml
<CustomField>
    <fullName>IT_Name_and_Legal_Name__c</fullName>
    <formula>Name + &quot; (&quot; + ER_Account_Name__r.Name + &quot;)&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IT Name and Legal Name</label>
    <type>Text</type>
</CustomField>