force-app/main/default/objects/ER_Financial_Center__c/fields/IT_New_Code__c.field-meta.xml
<CustomField>
    <fullName>IT_New_Code__c</fullName>
    <label>New Code</label>
    <length>6</length>
    <type>Text</type>
</CustomField>