force-app/main/default/objects/ER_Financial_Center__c/fields/IT_Opening_Outcome__c.field-meta.xml
<CustomField>
    <fullName>IT_Opening_Outcome__c</fullName>
    <label>Opening Outcome</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>IT_Opening</valueSetName>
    </valueSet>
</CustomField>