force-app/main/default/objects/ER_Financial_Center__c/fields/IT_Order_Code__c.field-meta.xml
<CustomField>
    <fullName>IT_Order_Code__c</fullName>
    <label>Order Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>