force-app/main/default/objects/ER_Financial_Center__c/fields/IT_Order_Emission_Frequency__c.field-meta.xml
<CustomField>
    <fullName>IT_Order_Emission_Frequency__c</fullName>
    <label>Order Emission Frequency</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>