force-app/main/default/objects/ER_Financial_Center__c/fields/IT_Particularities_Progressive_Number__c.field-meta.xml
<CustomField>
    <fullName>IT_Particularities_Progressive_Number__c</fullName>
    <label>Particularities Progressive Number</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>