force-app/main/default/objects/ER_Financial_Center__c/fields/IT_Payment_Term__c.field-meta.xml
<CustomField>
    <fullName>IT_Payment_Term__c</fullName>
    <label>Payment Term</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>IT_Payment_Code</valueSetName>
    </valueSet>
</CustomField>