force-app/main/default/objects/ER_Financial_Center__c/fields/IT_PEC_Mail__c.field-meta.xml
<CustomField>
    <fullName>IT_PEC_Mail__c</fullName>
    <label>PEC Mail</label>
    <type>Email</type>
</CustomField>