force-app/main/default/objects/ER_Financial_Center__c/fields/IT_Previous_Code__c.field-meta.xml
<CustomField>
    <fullName>IT_Previous_Code__c</fullName>
    <label>Previous Code</label>
    <length>6</length>
    <type>Text</type>
</CustomField>