force-app/main/default/objects/ER_Financial_Center__c/fields/IT_Pricing__c.field-meta.xml
<CustomField>
    <fullName>IT_Pricing__c</fullName>
    <label>Pricing</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>F</fullName>
            </value>
            <value>
                <fullName>P</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>