force-app/main/default/objects/ER_Financial_Center__c/fields/IT_Product2__c.field-meta.xml
<CustomField>
    <fullName>IT_Product2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Financial Centers</relationshipLabel>
    <relationshipName>Financial_Centers</relationshipName>
    <type>Lookup</type>
</CustomField>