force-app/main/default/objects/ER_Financial_Center__c/fields/IT_Region_code__c.field-meta.xml
<CustomField>
    <fullName>IT_Region_code__c</fullName>
    <label>Region code</label>
    <length>12</length>
    <type>Text</type>
</CustomField>