force-app/main/default/objects/ER_Financial_Center__c/fields/IT_Road_Arch_Code__c.field-meta.xml
<CustomField>
    <fullName>IT_Road_Arch_Code__c</fullName>
    <label>Road Arch Code</label>
    <length>6</length>
    <type>Text</type>
</CustomField>