force-app/main/default/objects/ER_Financial_Center__c/fields/IT_Sales_Account__c.field-meta.xml
<CustomField>
    <fullName>IT_Sales_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Account</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Financial Centers (Sales Account)</relationshipLabel>
    <relationshipName>Financial_Centers</relationshipName>
    <type>Lookup</type>
</CustomField>