force-app/main/default/objects/ER_Financial_Center__c/fields/IT_Sales_Manager_txt__c.field-meta.xml
<CustomField>
    <fullName>IT_Sales_Manager_txt__c</fullName>
    <label>Sales Manager</label>
    <length>255</length>
    <type>Text</type>
</CustomField>