force-app/main/default/objects/ER_Financial_Center__c/fields/IT_SDI__c.field-meta.xml
<CustomField>
    <fullName>IT_SDI__c</fullName>
    <label>SDI</label>
    <length>7</length>
    <type>Text</type>
</CustomField>