force-app/main/default/objects/ER_Financial_Center__c/fields/IT_Send_SUT_Printout__c.field-meta.xml
<CustomField>
    <fullName>IT_Send_SUT_Printout__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send SUT Printout</label>
    <type>Checkbox</type>
</CustomField>