force-app/main/default/objects/ER_Financial_Center__c/fields/IT_Sestiere_Code__c.field-meta.xml
<CustomField>
    <fullName>IT_Sestiere_Code__c</fullName>
    <label>Sestiere Code</label>
    <length>8</length>
    <type>Text</type>
</CustomField>