force-app/main/default/objects/ER_Financial_Center__c/fields/IT_Short_Name__c.field-meta.xml
<CustomField>
    <fullName>IT_Short_Name__c</fullName>
    <label>Short Company Name</label>
    <length>30</length>
    <type>Text</type>
</CustomField>