force-app/main/default/objects/ER_Financial_Center__c/fields/IT_Simple_Client__c.field-meta.xml
<CustomField>
    <fullName>IT_Simple_Client__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Simple Client</label>
    <type>Checkbox</type>
</CustomField>