force-app/main/default/objects/ER_Financial_Center__c/fields/IT_Single_Client_Multiactivity__c.field-meta.xml
<CustomField>
    <fullName>IT_Single_Client_Multiactivity__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Single Client Multiactivity</label>
    <type>Checkbox</type>
</CustomField>