force-app/main/default/objects/ER_Financial_Center__c/fields/IT_SkipActivation__c.field-meta.xml
<CustomField>
    <fullName>IT_SkipActivation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SkipActivation</label>
    <type>Checkbox</type>
</CustomField>