force-app/main/default/objects/ER_Financial_Center__c/fields/IT_Special_Billing_Type__c.field-meta.xml
<CustomField>
    <fullName>IT_Special_Billing_Type__c</fullName>
    <label>Special Billing Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>X</fullName>
                <label>ACTUAL - INCLUDING VAT</label>
            </value>
            <value>
                <fullName>Z</fullName>
                <label>BILL OF MENS. FATT CONS VAT AG</label>
            </value>
            <value>
                <fullName>Y</fullName>
                <label>EMISS. MONTH-END INCLUDING VAT</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>ISSUE - INCLUDING VAT</label>
            </value>
            <value>
                <fullName>W</fullName>
                <label>FATT.EM END OF THE MONTH IN VAT AGG.</label>
            </value>
            <value>
                <fullName>*</fullName>
                <label>FATT. ACTUAL VAT AGG.</label>
            </value>
            <value>
                <fullName>$</fullName>
                <label>A BILLING REPORTING</label>
            </value>
            <value>
                <fullName>1</fullName>
                <label>NO QUANTITY &#39;/ CUTTING IN BILL</label>
            </value>
            <value>
                <fullName>A</fullName>
                <label>VALUE CHARGED EMPL.COMPANY(A)</label>
            </value>
            <value>
                <fullName>B</fullName>
                <label>VALUE CHARGED EMPL.COMPANY (B)</label>
            </value>
            <value>
                <fullName>C</fullName>
                <label>VALUE CHARGED EMPL.COMPANY (C)</label>
            </value>
            <value>
                <fullName>D</fullName>
                <label>VALUE CHARGED EMPL.COMPANY (D)</label>
            </value>
            <value>
                <fullName>E</fullName>
                <label>ALL EMPLOYEE CHARGED</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>