force-app/main/default/objects/ER_Financial_Center__c/fields/IT_Ticket_Naming__c.field-meta.xml
<CustomField>
    <fullName>IT_Ticket_Naming__c</fullName>
    <label>Ticket Naming</label>
    <length>40</length>
    <type>Text</type>
</CustomField>