force-app/main/default/objects/ER_Financial_Center__c/fields/IT_Ticket_Per_Day__c.field-meta.xml
<CustomField>
    <fullName>IT_Ticket_Per_Day__c</fullName>
    <label>Ticket Per Day</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>