force-app/main/default/objects/ER_Financial_Center__c/fields/IT_Toponym__c.field-meta.xml
<CustomField>
    <fullName>IT_Toponym__c</fullName>
    <label>Toponym</label>
    <length>25</length>
    <type>Text</type>
</CustomField>