force-app/main/default/objects/ER_Financial_Center__c/fields/IT_VAT_Number__c.field-meta.xml
<CustomField>
    <fullName>IT_VAT_Number__c</fullName>
    <label>VAT Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>