force-app/main/default/objects/ER_Financial_Center__c/fields/IT_Warrant__c.field-meta.xml
<CustomField>
    <fullName>IT_Warrant__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Warrant</label>
    <type>Checkbox</type>
</CustomField>