force-app/main/default/objects/ER_Financial_Center__c/fields/IT_Welfare_Project__c.field-meta.xml
<CustomField>
    <fullName>IT_Welfare_Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Welfare Project</label>
    <referenceTo>IT_Welfare_Project__c</referenceTo>
    <relationshipLabel>Financial Center</relationshipLabel>
    <relationshipName>IT_Financial_Centers</relationshipName>
    <type>Lookup</type>
</CustomField>