force-app/main/default/objects/ER_Financial_Center__c/fields/IT_Zone__c.field-meta.xml
<CustomField>
    <fullName>IT_Zone__c</fullName>
    <label>Zone</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>IT_Zone</valueSetName>
    </valueSet>
</CustomField>