force-app/main/default/objects/ER_Financial_Center__c/validationRules/VRER01_FinancialC_Mandatory_Fields.validationRule-meta.xml
<ValidationRule>
    <fullName>VRER01_FinancialC_Mandatory_Fields</fullName>
    <active>false</active>
    <description>At least one of those fields need to be checked : Invoicing Site ? or &quot;Payment Site ?&quot;</description>
    <errorConditionFormula>AND( 
$User.ER_BypassVR__c = False,
NOT(OR(ER_Invoicing_Site__c = true,  ER_Payment_Site__c = true))
)</errorConditionFormula>
    <errorMessage>At least one of those fields need to be checked : &quot;Invoicing Site ?&quot; or &quot;Payment Site ?&quot;</errorMessage>
</ValidationRule>