force-app/main/default/objects/ER_Financial_Center__c/validationRules/VRIT01_CIG_Institution.validationRule-meta.xml
<ValidationRule>
    <fullName>VRIT01_CIG_Institution</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
$User.ER_BypassVR__c = False,
ISPICKVAL($User.ER_Business_Unit__c , &#39;IT&#39;),
NOT(ISCHANGED(IT_SkipActivation__c)),

ISPICKVAL( ER_Account_Name__r.IT_Company_Type__c ,&#39;Private&#39;),
OR(
NOT(ISBLANK( IT_CIG__c )),
NOT(ISBLANK( IT_Derived_CIG__c ))
))</errorConditionFormula>
    <errorMessage>Company = Private, Delete CIG and Derived CIG</errorMessage>
</ValidationRule>