force-app/main/default/objects/ER_Financial_Center__c/validationRules/VRIT02_Financial_Center_Name.validationRule-meta.xml
<ValidationRule>
    <fullName>VRIT02_Financial_Center_Name</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISCHANGED(Name),
$User.ER_BypassVR__c = False,
ISPICKVAL($User.ER_Business_Unit__c , &#39;IT&#39;),
NOT(ISCHANGED(IT_SkipActivation__c)))</errorConditionFormula>
    <errorMessage>Impossible to modify Financial Center name!</errorMessage>
</ValidationRule>