force-app/main/default/objects/ER_Financial_Center__c/validationRules/VRIT04_IT_Company_Type.validationRule-meta.xml
<ValidationRule>
    <fullName>VRIT04_IT_Company_Type</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
$User.ER_BypassVR__c = False,
ISPICKVAL($User.ER_Business_Unit__c , &#39;IT&#39;),


OR(
ISPICKVAL( ER_Account_Name__r.IT_Company_Type__c , &#39;Private&#39;),
ISPICKVAL( ER_Account_Name__r.IT_Company_Type__c, &#39;Private (work for Institution)&#39;),

AND(
ISPICKVAL( ER_Account_Name__r.IT_Company_Type__c, &#39;Institution&#39;),
IT_Accepts_New_Billing_System_PA__c = False)
),
			
OR(
ISCHANGED( IT_Office_Code__c ),
ISCHANGED( IT_CUP_Code__c ),
ISCHANGED( IT_Order_Code__c ),
ISCHANGED(  IT_EORI_Code__c ),
ISCHANGED(  IT_PEC_Mail__c ),
ISCHANGED(  IT_Invoice_Register_Wording__c )
)
)</errorConditionFormula>
    <errorMessage>The fields:
-Office Code; 
-CUP Code; 
-Order Code;
-EORI Code;
-PEC Mail;
-Invoice Register Wording;
are possible to be changed only for Institution that Accepted the billing system for PA!</errorMessage>
</ValidationRule>