force-app/main/default/objects/ER_Financial_Center__c/validationRules/VRIT05_Special_Billing.validationRule-meta.xml
<ValidationRule>
    <fullName>VRIT05_Special_Billing</fullName>
    <active>true</active>
    <errorConditionFormula>AND (
$User.ER_BypassVR__c = False,
ISPICKVAL($User.ER_Business_Unit__c , &#39;IT&#39;),
NOT(ISCHANGED(IT_SkipActivation__c)),

 ISCHANGED( IT_Special_Billing_Type__c ),
  ISPICKVAL( IT_Service__c , &#39;I&#39;) 

)</errorConditionFormula>
    <errorMessage>Special Billing Type cannot be modifed for Service &quot;Good Holiday&quot;!</errorMessage>
</ValidationRule>