force-app/main/default/objects/ER_Financial_Center__c/validationRules/VRIT06_Unique_Office_Code_Pec.validationRule-meta.xml
<ValidationRule>
    <fullName>VRIT06_Unique_Office_Code_Pec</fullName>
    <active>true</active>
    <errorConditionFormula>AND (
$User.ER_BypassVR__c = False,
ISPICKVAL($User.ER_Business_Unit__c , &#39;IT&#39;),
NOT(ISCHANGED(IT_SkipActivation__c)),

				 IT_Accepts_New_Billing_System__c  =true,
				  ISPICKVAL (ER_Account_Name__r.IT_Company_Type__c ,&#39;Private&#39;) ,
				 
				
 ISBLANK( IT_PEC_Mail__c), 
 ISBLANK (  IT_SDI__c  ) 


)</errorConditionFormula>
    <errorMessage>PEC Mail or Unique Office Code has to be populated!</errorMessage>
</ValidationRule>