force-app/main/default/objects/ER_Financial_Center__c/validationRules/VRIT07_Debt_Notes_Sending.validationRule-meta.xml
<ValidationRule>
    <fullName>VRIT07_Debt_Notes_Sending</fullName>
    <active>true</active>
    <errorConditionFormula>AND (
$User.ER_BypassVR__c = False,
ISPICKVAL($User.ER_Business_Unit__c , &#39;IT&#39;),
NOT(ISCHANGED(IT_SkipActivation__c)),

 ISCHANGED( IT_Don_t_Send_Debt_Note__c ),
 
ISPICKVAL(ER_Account_Name__r.IT_Company_Type__c, &#39;Institution&#39;)


)</errorConditionFormula>
    <errorMessage>Debt Notes Sending is possible to modify only for Private company type!</errorMessage>
</ValidationRule>