force-app/main/default/objects/ER_Financial_Center__c/validationRules/VRIT08_InvoiceDetail.validationRule-meta.xml
<ValidationRule>
    <fullName>VRIT08_InvoiceDetail</fullName>
    <active>false</active>
    <errorConditionFormula>AND (
$User.ER_BypassVR__c = False,
ISPICKVAL($User.ER_Business_Unit__c , &#39;IT&#39;),


OR (
 ISPICKVAL( IT_Service__c , &#39;1L&#39;) ,
 ISPICKVAL( IT_Service__c , &#39;1M&#39;),
 ISPICKVAL( IT_Service__c , &#39;1N&#39;),
 ISPICKVAL( IT_Service__c , &#39;1O&#39;),
 ISPICKVAL( IT_Service__c , &#39;1X&#39;),
 ISPICKVAL( IT_Service__c , &#39;2X&#39;)),

OR(
(ISPICKVAL( IT_Contract__r.IT_Invoice_Detail__c , &#39;0&#39;)), 

(ISPICKVAL(IT_Contract__r.IT_Invoice_Detail__c , &#39;1&#39;)) , 

(ISPICKVAL(IT_Contract__r.IT_Invoice_Detail__c , &#39;4&#39;))

))</errorConditionFormula>
    <errorMessage>test</errorMessage>
</ValidationRule>