force-app/main/default/objects/ER_Financial_Center__c/validationRules/VRIT09_Billing_System_PA.validationRule-meta.xml
<ValidationRule>
    <fullName>VRIT09_Billing_System_PA</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
$User.ER_BypassVR__c = False,
ISPICKVAL($User.ER_Business_Unit__c , &#39;IT&#39;),

 ISCHANGED( IT_Accepts_New_Billing_System_PA__c ),

OR(
ISPICKVAL(ER_Account_Name__r.IT_Company_Type__c , &#39;Private&#39;),
ISPICKVAL(ER_Account_Name__r.IT_Company_Type__c , &#39;Private (work for Institution)&#39;)))</errorConditionFormula>
    <errorMessage>Billing System for PA is possible to modify only for Institution company type!</errorMessage>
</ValidationRule>