force-app/main/default/objects/ER_Financial_Center__c/validationRules/VRIT10_Billing_System.validationRule-meta.xml
<ValidationRule>
    <fullName>VRIT10_Billing_System</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
$User.ER_BypassVR__c = False,
ISPICKVAL($User.ER_Business_Unit__c , &#39;IT&#39;),
NOT(ISCHANGED(IT_SkipActivation__c)),

ISCHANGED( IT_Accepts_New_Billing_System__c ),


ISPICKVAL(ER_Account_Name__r.IT_Company_Type__c , &#39;Institution&#39;)
)</errorConditionFormula>
    <errorMessage>Billing System (not for PA) is impossible to modify for Institution company type!</errorMessage>
</ValidationRule>