force-app/main/default/objects/ER_Financial_Center__c/validationRules/VRIT12_Status_Based_Change_Block.validationRule-meta.xml
<ValidationRule>
    <fullName>VRIT12_Status_Based_Change_Block</fullName>
    <active>true</active>
    <errorConditionFormula>AND (
$User.ER_BypassVR__c = False,
ISPICKVAL($User.ER_Business_Unit__c , &#39;IT&#39;),
NOT(ISCHANGED(IT_Count_Request__c)),				
NOT(ISCHANGED(IT_SkipActivation__c)),

$Profile.Name != &#39;IT System Integration&#39;,

OR(
ISPICKVAL (PRIORVALUE( IT_Client_Status__c), &#39;00&#39;),
ISPICKVAL (PRIORVALUE( IT_Client_Status__c), &#39;03&#39;),
ISPICKVAL (PRIORVALUE( IT_Client_Status__c), &#39;10&#39;)
)

)</errorConditionFormula>
    <errorMessage>Impossible to modify fields for this client status!</errorMessage>
</ValidationRule>