force-app/main/default/objects/ER_Financial_Center__c/validationRules/VRIT13_No_Payment_Code.validationRule-meta.xml
<ValidationRule>
    <fullName>VRIT13_No_Payment_Code</fullName>
    <active>true</active>
    <errorConditionFormula>AND (
$User.ER_BypassVR__c = False,
ISPICKVAL($User.ER_Business_Unit__c , &#39;IT&#39;),
NOT(ISCHANGED(IT_SkipActivation__c)),

ISPICKVAL( ER_Bank_Account__r.IT_Payment_Code__c , &#39;&#39;)

)</errorConditionFormula>
    <errorMessage>Missing Payment Code!</errorMessage>
</ValidationRule>