force-app/main/default/objects/ER_Financial_Center__c/validationRules/VRIT15_Unique_Office_Code_Length.validationRule-meta.xml
<ValidationRule>
    <fullName>VRIT15_Unique_Office_Code_Length</fullName>
    <active>true</active>
    <errorConditionFormula>AND (
$User.ER_BypassVR__c = False,
ISPICKVAL($User.ER_Business_Unit__c , &#39;IT&#39;),
OR(
LEN( IT_Office_Code__c ) &gt; 6,
LEN( IT_Office_Code__c ) &lt; 6),
IT_Office_Code__c != null
)</errorConditionFormula>
    <errorMessage>Unique Office Code must contains only 6 characters!</errorMessage>
</ValidationRule>