force-app/main/default/objects/ER_Financial_Center__c/validationRules/VRIT16_SDI.validationRule-meta.xml
<ValidationRule>
    <fullName>VRIT16_SDI</fullName>
    <active>true</active>
    <errorConditionFormula>AND (
$User.ER_BypassVR__c = False,
ISPICKVAL($User.ER_Business_Unit__c , &#39;IT&#39;),
OR(
ISPICKVAL( IT_Client_Status__c ,&#39;02&#39;),
ISPICKVAL( IT_Client_Status__c ,&#39;05&#39;)),

ER_Account_Name__r.IT_Send_Client_Billing_SDI__c = true,

OR(
AND(ISPICKVAL(ER_Account_Name__r.IT_Company_Type__c, &#39;Private&#39;),
ISBLANK(IT_SDI__c )),

AND(ISPICKVAL(ER_Account_Name__r.IT_Company_Type__c, &#39;Institution&#39;),
ISBLANK( IT_Office_Code__c )),

AND(ISPICKVAL(ER_Account_Name__r.IT_Company_Type__c, &#39;Private (work for Institution)&#39;),
ISBLANK( IT_Office_Code__c ))))</errorConditionFormula>
    <errorMessage>SDI mandatory at Financial Center level</errorMessage>
</ValidationRule>