force-app/main/default/objects/ER_Financial_Center__c/validationRules/VRIT17_SDILen.validationRule-meta.xml
<ValidationRule>
    <fullName>VRIT17_SDILen</fullName>
    <active>true</active>
    <errorConditionFormula>AND (
$User.ER_BypassVR__c = False,
ISPICKVAL($User.ER_Business_Unit__c , &#39;IT&#39;),
OR(
LEN( IT_SDI__c ) &gt; 7,
LEN( IT_SDI__c ) &lt; 7),
IT_SDI__c != null
)</errorConditionFormula>
    <errorMessage>SDI must contains only 7 characters!</errorMessage>
</ValidationRule>