force-app/main/default/objects/ER_Financial_Center__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>ER_Account_Name__c</columns>
    <columns>ER_Type__c</columns>
    <columns>ER_Bank_Account__c</columns>
    <columns>ER_City__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>IT_Client_Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>